--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
         "datatables.net-vue3": "^2.1.3",
         "jquery-confirm": "^3.3.4",
         "moment-jalaali": "^0.10.0",
-        "select2": "^4.1.0-rc.0",
         "v-select2-component": "^0.4.7",
         "validate.js": "^0.13.1",
         "vue": "^3.4.5",
-        "vue-multiselect": "^2.1.8",
-        "vue3-select2-component": "^0.1.7"
+        "vue-multiselect": "^3.0.0-beta.3"
     }
 }
