--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.2",
+        "datatables.net-dt": "^1.13.8",
         "datatables.net-editor": "^2.2.2",
         "datatables.net-editor-bs5": "^2.2.0",
         "datatables.net-vue3": "^2.1.3",
@@ -26,6 +27,7 @@
         "v-select2-component": "^0.4.7",
         "validate.js": "^0.13.1",
         "vue": "^3.4.5",
-        "vue-multiselect": "^3.0.0-beta.3"
+        "vue-multiselect": "^3.0.0-beta.3",
+        "vue3-multiselect-checkboxed": "^0.0.9"
     }
 }
