--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "validate.js": "^0.13.1",
         "vue": "^3.4.5",
         "vue-multiselect": "^3.0.0-beta.3",
+        "vue-tables-2": "^2.3.5",
         "vue3-multiselect-checkboxed": "^0.0.9"
     }
 }
