--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "postinstall": "node node_modules/datatables.net-editor/install.js ./Editor.zip",
         "watch": "vite build --watch"
     },
     "devDependencies": {
@@ -18,9 +17,11 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.2",
+        "datatables.net-bs5": "^1.13.8",
         "datatables.net-dt": "^1.13.8",
         "datatables.net-editor": "^2.2.2",
         "datatables.net-editor-bs5": "^2.2.0",
+        "datatables.net-select-bs5": "^1.7.0",
         "datatables.net-vue3": "^2.1.3",
         "jquery-confirm": "^3.3.4",
         "moment-jalaali": "^0.10.0",
