--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.6.5",
         "bootstrap": "^5.3.2",
         "laravel-datatables-vite": "^0.5.2",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0.0",
         "sass": "^1.56.1",
         "vite": "^5.0.0"
